# realtime-voice-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose-stg-ssl.yml  docker-compose-stg.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup-ngrok.sh  setup-ssl.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy-staging-ngrok.yml  deploy-staging.yml  rollback-staging.yml
alembic/: env.py
alembic/versions/: 030e3ac5aa78_initial_migration.py  9f0d7140b47a_remove_unnecessary_fields.py
app/: config.py  main.py  routes.py  test_ui.html
app/agent/: agent.py  prompt.py  tools.py
app/backend/: config.py  logger.py  main.py
app/backend/api/: __init__.py  prompts.py  settings.py  tools.py  websocket.py
app/backend/constants/: descriptions.py  prompts.py  settings_schema.json
app/backend/database/: models.py  session.py
app/backend/scripts/: reset_db.py
app/backend/services/: rag_service.py  settings_service.py  tool_service.py
app/backend/services/voice/: agent.py  transcription.py
app/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
app/frontend/public/: audio-processor.js
app/frontend/src/: App.vue  style.css
app/frontend/src/components/: PromptTab.vue  SettingsTab.vue  ToolCard.vue  ToolsTab.vue  VoiceTab.vue
app/frontend/src/composables/: usePrompts.js  useSettings.js  useTools.js  useVoiceChat.js
app/rag/: ingestion.py  retriever.py
app/static/: index.html
app/utils/: transcription.py
electron/: README.md  main.js  package-lock.json  package.json  preload.js
scripts/: setup-ngrok.sh
