[project]
name = "realtime-voice-agent"
version = "0.1.0"
description = "Realtime voice agent"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search==8.1.1",
    "fastapi==0.121.3",
    "langchain-community==0.4.1",
    "langchain-core==1.0.7",
    "langchain-tavily==0.2.13 ",
    "langgraph==1.0.3",
    "pydantic-settings==2.12.0",
    "tavily-python==0.7.13",
    "uvicorn==0.38.0",
    "websockets==15.0.1",
    "python-docx==1.2.0",
    "qdrant-client==1.16.0",
    "langchain-qdrant==1.1.0",
    "langchain-openai==1.0.3",
    "python-multipart==0.0.20"
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.5"
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "Q"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
